# PyBindExperiments

./: CMakeLists.txt  README.md
MyCFunctionBinder/: CMakeLists.txt  DataFrame.hpp  Function.cpp  Function.hpp  Main.cpp  ScriptEngine.cpp  ScriptEngine.fwd.hpp  ScriptEngine.hpp  ScriptFunctionsBinding.hpp  Value.cpp  Value.hpp
PyBindTracer/: CMakeLists.txt  Main.cpp  Tracer.cpp  Tracer.hpp
